work in progress

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-
+<ul>
+  <li>Name: <%= @document.name %></li>
+</ul>
 <%= link_to 'Edit', edit_document_path(@document) %> |
 <%= link_to 'Back', documents_path %>
