--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -10,7 +10,12 @@
       </ul>
     </div>
   <% end %>
-
+  <div class="form">
+    <ul>
+      <li>Title: <%= f.text_field :title%></li>
+      <li>Path: <%= f.text_field :path%></li>
+    </ul>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
