--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Name</th>
     <th></th>
     <th></th>
     <th></th>
@@ -9,9 +10,11 @@
 
 <% @documents.each do |document| %>
   <tr>
+    <td><%= document.name %></td>
     <td><%= link_to 'Show', document %></td>
     <td><%= link_to 'Edit', edit_document_path(document) %></td>
     <td><%= link_to 'Destroy', document, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Duplicate', "documents/#{document.id}/duplicate" %></td>
   </tr>
 <% end %>
 </table>
