--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,11 +2,26 @@
 <%= javascript_include_tag "cufon/AllertaStencil_400.font.js" %>
 <%= javascript_include_tag "CodeMirror-0.94/js/codemirror.js" %>
 
+<!-- ICanHaz templates -->
+
+<script type="text/html" id="documentItemTemplate">
+
+  <div class="document">
+         <div class="display">
+           <div class="document-title">{{ title }}</div>
+           <div class="document-path">{{ path }}</div>
+           <span class="document-destroy"></span>
+         </div>
+       </div>
+
+</script>
+
 <script type="text/javascript">
 var jsEditor = undefined;
 var cssEditor = undefined;
 
-$(document).ready(function() {
+$(document).ready(function() {  
+  App.init();
   
   $('#editors').accordion({
     active: '.selected',
@@ -22,7 +37,7 @@ $(document).ready(function() {
     lineNumbers: true,
     height: "100%"
     });
-  cssEditor = CodeMirror.fromTextArea("cssCode", {
+  cssEditor = new CodeMirror(CodeMirror.replace('cssCode'), {
       parserfile: ["parsecss.js"],
       path: "javascripts/CodeMirror-0.94/js/",
       stylesheet: "javascripts/CodeMirror-0.94/css/csscolors.css",
@@ -30,136 +45,50 @@ $(document).ready(function() {
       height: "100%"
       });
       });
-      </script>
-      <style type="text/css" media="screen"> 
-  
-    .CodeMirror-line-numbers {
-      width: 2.2em;
-      color: #aaa;
-      background-color: #eee;
-      text-align: right;
-      padding-right: .3em;
-      font-size: 10pt;
-      font-family: monospace;
-      padding-top: .4em;
-    }
+      
+     
     
-  .code {
-    font-family: Consolas, Monaco, "Lucida Console", monospace;
-    padding-right: 6px;
-  }
+</script>
 
-  .codeContainer {
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #bbb;
-    padding: 10px 10px 0 0;
-    padding-right: 20px;
-  }
-  
-  #editorContainer {
-      display: table-cell;
-      padding-left: 10px;
-      padding-right: 10px;
-  }
-  
-  #jsEditorContainer {
-    width: 100%; 
-    height: 100%;
-  }
-  
-  #mainContainer {
-    display: table;
-    border-collapse: collapse; 
-          height: 50%;
-    
-  }
-  
-  .codeHeader {
-    background-color: #333;
-    color: #aaa;
-    text-align: center;
-  }
-
-  #documentList {
-    
-  }
-  
-  #documentSelectionSection {
-    display: table-cell;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    border-radius: 6px;
-    border-right: 1px dotted #d7ad7b; 
-    padding-right: 10px;
-  }
-  
-  .liquid {
-    width: 100%;
-    height: 100%;
-  }
-  
-  #drawingCanvas {
-     border: 1px solid #00f;
-  }
-  
-  #canvasSection {
-    display: table-row;
-  }
-  
-  html, body {
-    height: 100%;
-  }
-  
-  h2 {
-    padding: 0;
-    outline: 0;
-    margin: 4px 0 0 0;
-  }
-  
-</style>
-
-
-<header><h1>raphaelditor</h1></header>
-<section id="mainSection">
-<div id="mainContainer" class="liquid">
 <section id="documentSelectionSection">
-  <div id="documentControlContainer">
-    <header><h2>Documents</h2></header>
-    <section id="documentSelectorContainer">
-      <input id="newDocumentButton" type="submit" value="Start From Scratch"/>
-      <ul id="documentList">
-        <% @documents.each do |doc| %>
-          <li><%=doc.name%></li>
-        <% end %>
-      </ul>
-    </section>
+  <div class="leftCol">
+  <div id="documentControlContainer" class="liquid">
+    <h2>Documents</h2>
+    <div id="documentSelectorContainer" class="liquid">
+        <button class="new-document">New</button>
+        <button class="refresh-document">Refresh</button>
+        <ul id="documentList" class="liquid"></ul>
+    </div>
+  </div>
+  <div id="notice"></div>
   </div>
 </section>
-<section id="editorContainer" class="liquid">
-    <div id="editorControlContainer">
-      <input id="saveDocumentButton" type="submit" value="Save"/>
-      <input id="resetDocumentButton" type="submit" value="Revert to Last Saved"/>
+
+<section id="mainSection" class="fullHeight">
+  <div class="rightCol">
+  <h2>Current Document</h2>
+  <div class="editorContainer">
+    <div class="fullWidth">
+      <button id="saveDocumentButton">Save</button>
+      <button id="resetDocumentButton">Revert</button>
     </div>
-    <div id="editors">
+    <div id="editors" class="fullHeight">
        <h2 class="codeHeader selected"><a >JavaScript</a></h2>
-    <div id="jsEditor" class="codeContainer"> 
-      <div id="jsCode">
-      </div>
+       <div id="jsEditor" class="codeContainer"> 
+          <div id="jsCode"></div>
+       </div>
+       <h2 class="codeHeader"><a >CSS</a></h2>
+       <div id="cssEditor" class="codeContainer">
+          <div id="cssCode"></div>
+        </div>
     </div>
-    <h2 class="codeHeader"><a >CSS</a></h2>
-    <div id="cssEditor" class="codeContainer">
-      <header></header>
-      <section>
-        <textarea id="cssCode" class="code">//this is css</textarea>
-      </section>
-    </div>
-    </div>
+  </div>
+  <div id="drawingCanvas">
+    <iframe src="/document_repo/Doc_1/index.html" width="100%" height="100%"></iframe>
+  </div>
+  </div>
 </section>
-</div>
 
 
-  <div id="drawingCanvas" class="liquid"></div>
-</section>
-<footer><p>Some Rights Reserved Sean Zehnder 2010-2011</p></footer>
+
+<footer>footer of the main page</footer>
