--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,11 @@
 <head>
   <title>JsRevisions</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= include_stylesheets :common, :app %>
+  <%= include_javascripts :app %>
   <%= csrf_meta_tag %>
+  
+  
 </head>
 <body>
 
