--- a/public/document_repo/Doc_4/my_nodebox.css
+++ b/public/document_repo/Doc_4/my_nodebox.css
@@ -1,1 +1,6 @@
 /* copyright 2010-2011 Sean Zehnder */
+/* copyright 2010-2011 Sean Zehnder */
+/* copyright 2010-2011 Sean Zehnder */
+/* copyright 2010-2011 Sean Zehnder */
+/* copyright 2010-2011 Sean Zehnder */
+/* copyright 2010-2011 Sean Zehnder */
