--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -116,7 +116,8 @@ ol, ul {
     font-size: 24px;
     line-height: 1.1em;
     border-bottom: 1px solid #cccccc;
-    margin-left: 6px;
+    padding-left: 10px;
+    
   }
   
  /* #documentList li.selected {
