--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -2,7 +2,8 @@
 
 <table>
   <tr>
-    <th>Name</th>
+    <th>Title</th>
+    <th>Path</th>
     <th></th>
     <th></th>
     <th></th>
@@ -10,7 +11,8 @@
 
 <% @documents.each do |document| %>
   <tr>
-    <td><%= document.name %></td>
+    <td><%= document.title %></td>
+    <td><%= document.path %></td>
     <td><%= link_to 'Show', document %></td>
     <td><%= link_to 'Edit', edit_document_path(document) %></td>
     <td><%= link_to 'Destroy', document, :confirm => 'Are you sure?', :method => :delete %></td>
