--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
 <%= javascript_include_tag "raphael-min-1.5.2.js" %>
 <%= javascript_include_tag "cufon/AllertaStencil_400.font.js" %>
-<%= javascript_include_tag "CodeMirror-0.94/js/codemirror.js" %>
+<%= javascript_include_tag "ace/ace-uncompressed.js" %>
+<%= javascript_include_tag "ace/theme-vibrant_ink.js" %>
+<%= javascript_include_tag "ace/mode-javascript.js" %>
 
+<link rel="stylesheet" href="javascripts/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css" media="screen">
 <!-- ICanHaz templates -->
 
 <script type="text/html" id="documentItemTemplate">
@@ -30,24 +33,29 @@ $(document).ready(function() {
        fillSpace: true, 
        animated: 'easeslide'
   });
-  jsEditor = CodeMirror.fromTextArea("jsTextArea", {
-    parserfile: ["tokenizejavascript.js", "parsejavascript.js"],
-    path: "javascripts/CodeMirror-0.94/js/",
-    stylesheet: "javascripts/CodeMirror-0.94/css/jscolors.css",
+/*  jsEditor = CodeMirror.fromTextArea(document.getElementById("jsTextArea"), {
     lineNumbers: true,
     reindentOnLoad: true,
     tabMode: 'spaces',
     height: "100%"
     });
     
-  cssEditor = new CodeMirror(CodeMirror.replace('cssCode'), {
-      parserfile: ["parsecss.js"],
-      path: "javascripts/CodeMirror-0.94/js/",
-      stylesheet: "javascripts/CodeMirror-0.94/css/csscolors.css",
+  cssEditor = CodeMirror.fromTextArea(document.getElementById("cssTextArea"), {
       lineNumbers: true,
       reindentOnLoad: true,
       height: "100%"
       });
+     
+      $("#newDocBtn").fancybox({
+          'type' : 'ajax'
+         });
+      */
+      
+      jsEditor = window.__ace_shadowed__.edit("jsCodeEditor");
+      jsEditor.setTheme("ace/theme/vibrant_ink");
+
+      var JavaScriptMode = window.__ace_shadowed__.require("ace/mode/javascript").Mode;
+      jsEditor.getSession().setMode(new JavaScriptMode());
       
     });
      
@@ -55,11 +63,11 @@ $(document).ready(function() {
 </script>
 
 <section id="documentSelectionSection">
-  <div class="leftCol">
+  <div class="navCol">
   <div id="documentControlContainer" class="liquid">
     <h2>Documents</h2>
     <div id="documentSelectorContainer" class="liquid">
-        <button class="new-document">New</button>
+       <a id="newDocBtn" class="new-document" href="documents/new/">New</a>
         <button class="refresh-document">Refresh</button>
         <ul id="documentList" class="liquid"></ul>
     </div>
@@ -69,7 +77,7 @@ $(document).ready(function() {
 </section>
 
 <section id="mainSection" class="fullHeight">
-  <div class="rightCol">
+  <div class="docCol">
   <h2>Current Document</h2>
   <div class="editorContainer">
     <div class="fullWidth">
@@ -78,21 +86,29 @@ $(document).ready(function() {
     </div>
     <div id="editors" class="fullHeight">
        <h2 class="codeHeader selected"><a >JavaScript</a></h2>
-       <div id="jsEditor" class="codeContainer"> 
-          <div id="jsCode"><textArea id="jsTextArea"></textArea></div>
+       <div id="jsEditor" name="jsEditor" class="codeContainer"> 
+          <div id="jsCode">
+            <pre id="jsCodeEditor">
+              /** this is a test **/
+              
+              //this is only a test
+            </pre>
+          </div>
        </div>
        <h2 class="codeHeader"><a >CSS</a></h2>
        <div id="cssEditor" class="codeContainer">
-          <div id="cssCode"></div>
+          <div id="cssCode"><textArea id="cssTextArea" wrap="OFF"></textArea></div>
         </div>
     </div>
-  </div>
-  <div id="drawingCanvas">
-    <iframe id="liveDocument" src="" width="100%" height="100%"></iframe>
   </div>
   </div>
 </section>
 
-
+<section id="drawingsection" class="fullHeight">
+<div id="drawingCanvas"  class="drawingCol">
+    <h2>Current Drawing</h2>
+   <iframe id="liveDocument" src="" width="100%" height="100%"></iframe>
+ </div>
+</section>
 
 <footer>footer of the main page</footer>
